--- a/BobChessClock.htm
+++ b/BobChessClock.htm
@@ -214,6 +214,7 @@ function clickPlayer(player) {
 		// set up for this move, and ui.
 		LastTouch = new Date();
 		update();
+		if (moving == 0) { document.getElementById('player1').focus(); } else {  document.getElementById('player2').focus(); }
 	} else if (moving == -1) {
 		// we are starting the match
 		document.onkeyup = key;
@@ -356,7 +357,7 @@ You seem not to have JavaScript enabled. Without it,  <a href="http://code.googl
 </noscript>
 
 <div id="play" style="text-align: center; display: none; height:99%; width: 99%;">
-<input type="button" style=" font-size:300%; width:49%; height:90%; text-align: left; background-color: black; padding: 10px;" id="player1" onclick="clickPlayer(0);">
+<input type="button" style=" font-size:300%; width:49%; height:90%; text-align: left; background-color: #222; padding: 10px;" id="player1" onclick="clickPlayer(0);">
 <input type="button" style=" font-size:300%; width:49%; height:90%; text-align: right; background-color: #ccc; padding: 10px;" id="player2" onclick="clickPlayer(1);">
 <br>
 (<a href="#" onclick="reset(); return false;">reset timers</a>) 
