--- a/BobChessClock.htm
+++ b/BobChessClock.htm
@@ -36,6 +36,7 @@ var fischerBefore;
 var fischerAfter;
 var timeWarningSecs;
 var bronsteinSecs;
+var keyboardLayout = "uk-qwerty";
 
 function stopTimer() {
 	if (timer == undefined) return;
@@ -228,10 +229,18 @@ function clickPlayer(player) {
 
 function key(e) {
 	var k = (window.event) ? event.keyCode : e.keyCode;
-	if (k == 49 || k == 50 || k == 51 || k == 52 || k == 53 || k == 81 || k == 113 || k == 87 || k == 119 || k == 69 || k == 101 || k == 84 || k == 116 || k == 65 || k == 97 || k == 83 || k == 115 || k == 68 || k == 100 || k == 70 || k == 102 || k == 71 || k == 103 || k == 90 || k == 122 || k == 88 || k == 120 || k == 67 || k == 99 || k == 86 || k == 118) {
-		clickPlayer(0);
-	} else if (k == 54 || k == 55 || k == 56 || k == 57 || k == 48 || k == 89 || k == 121 || k == 85 || k == 117 || k == 73 || k == 105 || k == 79 || k == 111 || k == 80 || k == 112 || k == 72 || k == 104 || k == 74 || k == 105 || k == 74 || k == 106 || k == 75 || k == 107 || k == 76 || k == 108 || k == 66 || k == 98 || k == 78 || k == 110 || k == 77 || k == 109) {
-		clickPlayer(1);
+	if (keyboardLayout == "uk-qwerty") {
+		if (k == 49 || k == 50 || k == 51 || k == 52 || k == 53 || k == 81 || k == 113 || k == 87 || k == 119 || k == 69 || k == 101 || k == 84 || k == 116 || k == 65 || k == 97 || k == 83 || k == 115 || k == 68 || k == 100 || k == 70 || k == 102 || k == 71 || k == 103 || k == 90 || k == 122 || k == 88 || k == 120 || k == 67 || k == 99 || k == 86 || k == 118) {
+			clickPlayer(0);
+		} else if (k == 54 || k == 55 || k == 56 || k == 57 || k == 48 || k == 89 || k == 121 || k == 85 || k == 117 || k == 73 || k == 105 || k == 79 || k == 111 || k == 80 || k == 112 || k == 72 || k == 104 || k == 74 || k == 105 || k == 74 || k == 106 || k == 75 || k == 107 || k == 76 || k == 108 || k == 66 || k == 98 || k == 78 || k == 110 || k == 77 || k == 109) {
+			clickPlayer(1);
+		}
+	} else if (keyboardLayout == "uk-dvorak") {
+		if ( k == 49 || k == 50 || k == 51 || k == 52 || k == 53 || k == 39 || k == 44 || k == 46 || k == 112 || k == 80 || k == 121 || k == 89 || k == 97 || k == 65 || k == 111 || k == 79 || k == 101 || k == 69 || k == 117 || k == 85 || k == 105 || k == 73 || k == 59 || k == 113 || k == 81 || k == 106 || k == 74 || k == 107 || k == 75 || k == 120 || k == 88) {
+			clickPlayer(0);
+		} else if ( k == 54 || k == 55 || k == 56 || k == 57 || k == 48 || k == 102 || k == 70 || k == 103 || k == 71 || k == 99 || k == 67 || k == 114 || k == 82 || k == 108 || k == 76 || k == 47 || k == 61 || k == 100 || k == 68 || k == 104 || k == 72 || k == 116 || k == 84 || k == 110 || k == 78 || k == 115 || k == 83 || k == 45 || k == 98 || k == 66 || k == 109 || k == 77 || k == 119 || k == 87 || k == 118 || k == 86 || k == 122 || k == 90 || k == 91 || k == 93){
+			clickPlayer(1);
+		}
 	}
 }
 
@@ -333,6 +342,17 @@ function onPageLoad() {
         if (getCookie('timeWarning') == 'off') {
                 document.getElementById('TimeWarning').checked = false;
         }
+	// keyboard layout
+	var kbLayout = getCookie('kbLayout');
+	if (kbLayout) {
+		var ele =  document.getElementById('KbLayout');
+		for(var i = 0; i < ele.length; i++) {
+			if (ele.options[i].value == kbLayout) {
+				ele.selectedIndex = i;
+				keyboardLayout = ele.options[i].value;
+			} 
+		}
+	}
 }
 
 function diffStartTimesForm(show) {
@@ -389,7 +409,11 @@ You seem not to have JavaScript enabled. Without it,  <a href="http://code.googl
 <fieldset>
 <legend>Options</legend>
 <p><input type="checkbox" name="TimeWarning" id="TimeWarning" checked="checked"><label for="TimeWarning">Turn clocks red when there is only</label> <input type="text" name=""TimeWarningSecs" id="TimeWarningSecs" value="5" size="2"> seconds left.</p>
-<p>Keyboard Layout: <select><option>QWERTY UK/American</option></select> <a href="http://code.google.com/p/bobchess/wiki/KeyboardLayouts" target="_blank">Add More</a></p>
+<p>Keyboard Layout: 
+<select id="KbLayout" onchange="keyboardLayout = this.value; setCookie('kbLayout',this.value);">
+	<option value="uk-qwerty" selected>UK/USA</option>
+	<option value="uk-dvorak">UK/USA Dvorak</option>
+</select> <a href="http://code.google.com/p/bobchess/wiki/KeyboardLayouts" target="_blank">Add More</a></p>
 </fieldset>
 <p><input value="Start The Match" type=submit onclick="startMatch(); return false;"></p>
 </form>
