--- a/trunk/BobChessClock.htm
+++ b/trunk/BobChessClock.htm
@@ -66,9 +66,11 @@ function init() {
 	bronsteinSecs = 0;
 	// warn by turning clocks red when there a certain number of seconds left, 0 to disable.
 	timeWarningSecs = 0;
-	// set ui to normal colours
+	// set ui to normal colours and size
 	document.getElementById('player1').style.color = 'white';
 	document.getElementById('player2').style.color = 'black';
+	document.getElementById('player1').style.fontSize='300%';
+	document.getElementById('player2').style.fontSize='300%';
 }
 
 function startMatch() {
@@ -180,15 +182,15 @@ function update() {
 	if (timenow[0] <= 0) { players[0] = 0; moving = -2; stopTimer(); }
 	if (timenow[1] <= 0) { players[1] - 0; moving = -2; stopTimer(); }
 
-	document.getElementById('player1').value = renderTime(timenow[0], (moving == 0));
-	document.getElementById('player2').value = renderTime(timenow[1], (moving == 1));
+	document.getElementById('player1').value = renderTime(timenow[0]);
+	document.getElementById('player2').value = renderTime(timenow[1]);
+
 }
 
-function renderTime(milliseconds, running) {
-	if (milliseconds < 1) { return 'Out of Time'; }
+function renderTime(milliseconds) {
+	if (milliseconds < 1) { return 'Lose'; }
 	var seconds = milliseconds / 1000;
 	var out = parseInt(seconds / (60*60))+":"+parseInt((seconds / 60)%60)+":"+parseInt(seconds%60);
-	if (running) { out = "* "+out + " *"; }
 	return out;
 }
 
@@ -204,7 +206,9 @@ function clickPlayer(player) {
 		if (bronsteinSecs > 0) players[moving] = players[moving] + Math.min(diff, bronsteinSecs*1000);
 		else if (fischerAfter) players[moving] = players[moving] + fischerSecs * 1000;
 		// switch players
+		document.getElementById('player'+(moving+1)).style.fontSize='300%';
 		if (player == 1 ) { moving = 0; } else { moving = 1; }
+		document.getElementById('player'+(moving+1)).style.fontSize='800%';
 		// modes that add time before a move
 		if (fischerBefore) players[moving] = players[moving] + fischerSecs * 1000;
 		// we may have now added enought time that we have to turn clocks from red back to original colour ...
@@ -220,6 +224,7 @@ function clickPlayer(player) {
 		// we are starting the match
 		document.onkeyup = key;
 		moving = player;
+		document.getElementById('player'+(moving+1)).style.fontSize='800%';
 		if (fischerBefore) players[moving] = players[moving] + fischerSecs * 1000;
 		timer = setInterval("update()",400);
 		LastTouch = new Date();
@@ -392,7 +397,7 @@ function diffStartTimesForm(show) {
 		<fieldset>
 			<legend>Instructions</legend>
 			<p>Set the options you want below and click "Start". Two buttons will appear, with the times displayed.</p>
-			<p>To start the clocks running click on either one of them. The clock you click on will start counting down, and this will be marked by * signs.</p>
+			<p>To start the clocks running click on either one of them. The clock you click on will start counting down.</p>
 			<p>When a players clock is running, they can press a number or letter key on their side of the keyboard or click their clock with the mouse to end their go and start their opponents clock running.</p>
 			<p>There is a pause button on the bottom of the screen.</p>
 		</fieldset>
