--- a/trunk/BobChessClock.htm
+++ b/trunk/BobChessClock.htm
@@ -190,8 +190,17 @@ function update() {
 function renderTime(milliseconds) {
 	if (milliseconds < 1) { return 'Lose'; }
 	var seconds = milliseconds / 1000;
-	var out = parseInt(seconds / (60*60))+":"+parseInt((seconds / 60)%60)+":"+parseInt(seconds%60);
+	if (seconds > 60*60) {
+		return parseInt(seconds / (60*60))+":"+zeropad((seconds / 60)%60)+":"+zeropad(seconds%60);
+	} else if ( seconds > 60) {
+		return parseInt(seconds / 60)+":"+zeropad(seconds%60);
+	} else {
+		return parseInt(seconds);
+	}
 	return out;
+}
+function zeropad(innum) {
+	if (innum < 10) { return "0"+parseInt(innum); } else { return parseInt(innum); }
 }
 
 function clickPlayer(player) {
