--- a/trunk/BobChessClock.htm
+++ b/trunk/BobChessClock.htm
@@ -24,6 +24,7 @@ Revision $Revision$ checked in $Date$
 <style type="text/css">
 h1 { text-align: center; font-family: sans-serif; }
 div#start { width: 70%; margin: 0px auto; }
+fieldset { padding: 10px; }
 </style>
 <script>
 var LastTouch;
